添加和删除同学录

--- a/pom.xml
+++ b/pom.xml
@@ -182,10 +182,28 @@
           <scope>test</scope>
       </dependency>
 
-
-
   </dependencies>
   <build>
     <finalName>ssm_classmate</finalName>
   </build>
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.properties</include>
+                    <include>**/*.xml</include>
+                </includes>
+                <filtering>false</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*.properties</include>
+                    <include>**/*.xml</include>
+                </includes>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
+    </build>
 </project>
